# bevy_fn_plugin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs
tests/: compile_fail.rs  compile_test.rs  test.rs
tests/compile-fail/: bare_generic_type_param.rs  bare_generic_type_param.stderr  empty-struct.stderr  empty_struct.rs  empty_struct.stderr  enum.rs  enum.stderr  fn_no_args.rs  fn_no_args.stderr  fn_return_type.rs  fn_return_type.stderr  fn_too_many_args.rs  fn_too_many_args.stderr  fn_wrong_arg_type.rs  fn_wrong_arg_type.stderr  generics_nyi.rs  generics_nyi.stderr
tests/compile-warn/: non_camel_case.rs  non_camel_case.stderr  static_lifetime_param.rs  static_lifetime_param.stderr
