[package]
name = "bevy_fn_plugin"
version = "0.1.0"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
edition = "2021"
description = "Create Bevy plugins from functions"
readme = "README.md"
repository = "https://github.com/Xion/bevy_fn_plugin"
license = "MIT OR Apache-2.0"
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

[lib]
proc-macro = true

[features]
default = []
debug = [
    "syn/extra-traits",
]

[badges]
maintenance = { status = "experimental" }


[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = [
    "full",
    "parsing",
    "printing",
    "proc-macro",
]


[dev-dependencies]
bevy = { version = "0.10", default-features = false }
trybuild = "1.0"
